[gd_scene load_steps=12 format=3 uid="uid://d01rtexr3mhde"]

[ext_resource type="Texture2D" uid="uid://xak7vnsvdk" path="res://textures/bg.png" id="1"]
[ext_resource type="FontFile" uid="uid://dwcbopb11oxfl" path="res://EquipmentPro.otf" id="2"]
[ext_resource type="Script" path="res://scenes/Menu.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://b8imi7jwe6qxb" path="res://sfx/menu.wav" id="4"]

[sub_resource type="Shader" id="2"]
code = "shader_type canvas_item;


uniform float speed;


void fragment () {
	COLOR = texture(TEXTURE, vec2(UV.x - TIME * speed, UV.y  + TIME * speed));
}"

[sub_resource type="ShaderMaterial" id="1"]
shader = SubResource("2")
shader_parameter/speed = 0.05

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Menu" type="Node2D"]
script = ExtResource("3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
material = SubResource("1")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 2

[node name="Items" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -264.0
offset_right = 448.0
offset_bottom = -72.0
theme_override_colors/font_color = Color(1, 0.921569, 0.298039, 1)
theme_override_fonts/font = SubResource("3")
text = "Game ÄžPrototype"

[node name="Items2" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -48.0
offset_right = 384.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(1, 0.921569, 0.298039, 1)
theme_override_fonts/font = SubResource("6")
text = "Play"

[node name="Items5" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -360.0
offset_right = 384.0
offset_bottom = -168.0
theme_override_colors/font_color = Color(1, 0.921569, 0.298039, 1)
theme_override_fonts/font = SubResource("7")
text = "You Survived For:"

[node name="Items3" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = 96.0
offset_right = 384.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(1, 0.921569, 0.298039, 1)
theme_override_fonts/font = SubResource("4")
text = "Quit"

[node name="play" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 544.0
offset_top = 368.0
offset_right = 728.0
offset_bottom = 472.0

[node name="quit" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 536.0
offset_top = 512.0
offset_right = 736.0
offset_bottom = 592.0

[node name="Items4" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = 240.0
offset_right = 392.0
offset_bottom = 432.0
theme_override_colors/font_color = Color(1, 0.921569, 0.298039, 1)
theme_override_fonts/font = SubResource("5")
text = "Bladeblast - Emre Yilmaz - Merve Karabulut"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -7.866
autoplay = true

[connection signal="pressed" from="CanvasLayer/Control/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/quit" to="." method="_on_quit_pressed"]
